--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -1,16 +1,39 @@
 body{
     margin-block: 0 20px 0 0;
     width: 800px;
+    border: solid greenyellow;
+    border-radius:10px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.contenedor{
+    text-align: center;
+    border-radius: 5px;
+    border: solid green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:fit-content;
+    margin-left: 30%;
+}
+p{
+    padding: 20px;
 }
 h1{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 40px;
     padding: 0px 20px 0 20px;
-    color: green
+    color: green;
+    text-align: center;
+}
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    padding: 0px 20px 0 20px;
+    color: red;
 }
 li{
     line-height: 1.3rem;
-    border: solid;
-    border-radius: 10px;
-    background-color: bisque;
-}
+    border-radius:5px;  
+    margin-right: 140px;
+  }
