--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap');
+
 body{
     margin-block: 0 20px 0 0;
     width: 800px;
@@ -10,7 +12,7 @@ body{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
+    width: 30%;
     border: solid 3px greenyellow;
     border-radius: 5px;
 }
@@ -25,10 +27,18 @@ h1{
     text-align: center;
 }
 h2{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Neuton", serif;
+    font-weight: 700;
+    font-style: normal;  
     font-size: 30px;
     padding: 0px 20px 0 20px;
     color: red;
+    border: solid blue;
+    background-color: aqua;
+    border-radius: 10px;
+    width: 250px;
+    margin: 0 0 0 10px;
+    padding: 0 0 5px 10px;
 }
 li{
     line-height: 1.3rem;
