--- a/Recipe/style.css
+++ b/Recipe/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&display=swap');
 
+html{
+    background-color: aquamarine;
+    padding: 10px;
+}
 body{
     margin-block: 0 20px 0 0;
     width: 800px;
@@ -7,6 +11,7 @@ body{
     border-radius:10px;
     margin-left: auto;
     margin-right: auto;
+    background-color: whitesmoke;
 }
 .center{
     display: block;
