--- a/midterm/Style.css
+++ b/midterm/Style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 #wrapper{
     width: 1200px;
     margin-left: auto;
@@ -18,4 +19,21 @@ header{
     background-color: black;
     padding: 0.5em 1em;
     border-radius: 10px;
+}
+nav{
+    background:linear-gradient(90deg, #01F 0%, #F00 100%);
+    padding: 1em;
+}
+nav a{
+    color: white;
+    font-family:"poppins", serif;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: normal;
+    padding: 25px;
+    text-decoration: none;
+}
+nav a:hover{
+    color: aquamarine;
+    text-decoration: none;
 }
