--- a/midterm/Style.css
+++ b/midterm/Style.css
@@ -44,3 +44,18 @@ nav a:hover{
     background-color: rgba(255, 255, 255, 0.179);
     text-decoration: none;  
 } 
+main{
+    color: white;
+}
+.col{
+    width: 44%;
+    float:left;
+    margin: 4%;
+    }
+.col:last-child{
+    margin-right: 0%;
+}
+footer{
+    clear: both;
+    color: white;
+}
