--- a/midterm/Style.css
+++ b/midterm/Style.css
@@ -59,3 +59,25 @@ footer{
     clear: both;
     color: white;
 }
+
+/*Episodes Page Style*/
+.episodes{
+    display: flex;
+    flex-wrap: wrap;
+
+    }
+.episodes-cards{
+    width: 270px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+.episodes-cards:last-child{
+    margin-right: 0;
+}
+.episodes-cards img{
+    width: 100%;
+    border-radius: 20px;
+}
+.episodes-cards p, .episodes-cards h4{
+    padding: 10px 0 0 0;
+}
