--- a/midterm/Style.css
+++ b/midterm/Style.css
@@ -11,17 +11,23 @@ header{
     padding: 4em 2em;
     background-color: aqua;
     background:linear-gradient(90deg, rgba(0,255,132,0.6027004551820728) 0%, rgba(0,0,0,1) 100%),
-    url(images/Zaun.jpg) no-repeat right;
+    url(images/Zaun.png) no-repeat right;
+    background-size: cover;
+    background-position: center;
     }
 .left{
     color: white;
     width: 40%;
 }
+.left p{
+    padding: 0 0 30px 0;
+}
 .button{
     color:white;
     background-color: black;
-    padding: 0.5em 1em;
+    padding: 1em 5em 1em 5em;
     border-radius: 10px;
+    text-decoration: none;
 }
 .button:hover{
     background-color: #F00;
@@ -70,6 +76,13 @@ footer{
     margin-right: 30px;
     margin-bottom: 30px;
 }
+.episodes-cards:nth-child(3) img[src="images/ChildJinx2.0.png"]{
+    width: 270px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    padding: 0 0 10px 0;
+}
+
 .episodes-cards:last-child{
     margin-right: 0;
 }
