--- a/Exercise10/style.css
+++ b/Exercise10/style.css
@@ -20,11 +20,17 @@ nav li li a{
     color: white;
 }
 nav a:hover{
-    background-color: aqua;
+    background-color: rgb(0, 255, 72);
 }
 nav li ul{
     display: none;
 }
 nav li:hover ul{
     display: block;
+}
+.material-symbols-outlined{
+    float: right;
+    color: black;
+    padding-top: 15px;
+    size: 50px;
 }
