--- a/Final Exam/style.css
+++ b/Final Exam/style.css
@@ -92,6 +92,10 @@
   .nav-links a {
     text-decoration: none;
     font-weight: bold;
+    color: #000;
+  }
+  .nav-links:hover a{
+    color: aqua;
   }
   
   .nav-search {
@@ -129,8 +133,12 @@
   
   .dropdowns {
     display: flex;
-    flex-direction: column;
-    gap: 0.75rem;
+    flex-direction:row wrap;  
+    flex-basis: auto;
+    align-items: center;
+    justify-content: center;
+    align-content: space-between;
+    gap: 25%;
   }
   
   .dropdown label {
@@ -164,12 +172,15 @@
   
   .btn-apply {
     display: inline-block;
-    padding: 0.5rem 1.5rem;
+    padding: 8px 90px 8px 90px;
     border-radius: 999px;
     background: var(--black);
     color: var(--white);
     text-decoration: none;
     font-weight: bold;
+  }
+  .btn-apply:hover{
+    background-color: blue;
   }
   
   .hero-logos {
@@ -181,8 +192,8 @@
   }
   
   .hero-logos img {
-    max-height: 50px;
-  }
+    max-height: 50%;
+  } 
   
   /* MAIN LAYOUT */
   .layout {
