--- a/Final/style.css
+++ b/Final/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@500&family=PT+Sans:wght@400;700&family=Play&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Poetsen+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
  margin:0;
  padding:0;
@@ -40,7 +40,7 @@ padding:0.5em;
 }
 
 .button:hover{
- background-color: #04056A;
+ background-color: #0077ff;
  color:#fff;
  transform:scale(1.05);
 }
@@ -148,7 +148,7 @@ padding:0.5em;
 /* banner styles */
 
 .banner{
- background-image: url("images/slide2.jpg");
+ background-image: url("Images/slide2.jpg");
  max-width: 1140px;
 
  position:relative;
