--- a/Final/style.css
+++ b/Final/style.css
@@ -149,7 +149,7 @@ padding:0.5em;
 /* banner styles */
 
 .banner{
- background-image: url("Images/slide2.jpg");
+ background-image: url("images/slide2.jpg");
  max-width: 1140px;
 
  position:relative;
