--- a/Final/style.css
+++ b/Final/style.css
@@ -32,18 +32,19 @@ h2{
 }
 
 .button{
-padding:0.5em;
- margin-bottom: 3em;
+ margin-bottom: 30px auto;
+ padding: 15px;
+ text-align: center;
  background-color:#080726;
  color:#ffff;
  border-radius:10px;
- text-decoration: none;  transition: all 0.2s ;
+ text-decoration: none;  transition: all 0.3s ;
+ font-weight: bold;
 }
 
 .button:hover{
- background-color: #0077ff;
- color:#fff;
- transform:scale(1.05);
+  background-color: #00bfff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
 }
 
 main a{
@@ -142,6 +143,9 @@ padding:0.5em;
 }
 .search-program li:hover img{
  transform: rotate(180deg);
+}
+.news-item{
+margin: 1.3em;
 }
 
 
