--- a/Final/style.css
+++ b/Final/style.css
@@ -7,6 +7,7 @@
 
 body{
  font-family: 'Play', sans-serif;  margin:1em;
+ background-color: antiquewhite;
 }
 
 #wrapper{
@@ -19,7 +20,10 @@ p, h1, h2,h3,nav, article{
  margin-bottom: 1em;
  color:#080726;
 }
-
+p{
+  margin-bottom: 20px; 
+    line-height: 1.8; 
+}    
 h1{
   border: solid 8px;
   background-color: #000000;
@@ -62,7 +66,7 @@ text-decoration: none;
 }
 
 a:hover{
- color:#080726;
+ color:white;
 }
 
 .img-responsive{
@@ -79,11 +83,12 @@ header{
 #dropmenu{
 position:absolute;
 border:solid 1px #F27649;
-padding:0.5em;
+padding:1em;
 background-color: #fff;
 text-align: right;
 display:none;
 right:0;
+border-radius: 15px;
 }
 
 #dropmenu ul{
